--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bluerhinos/phpmqtt": "^1.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.1",
+        "laravel/tinker": "^2.10.1",
+        "php-mqtt/client": "^2.2",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
